syntax = "proto3";

package users;

option go_package = "github.com/p-jirayusakul/golang-echo-homework-1/proto/_generated/users";

service UsersServices {
    rpc CreateProfiles(CreateProfilesRequest) returns (CreateProfilesResponse);
}


message CreateProfilesRequest {
    string userId = 1;
    optional string firstName = 2;
    optional string lastName = 3;
    string email = 4;
    optional string phone = 5;
}

message CreateProfilesResponse {
    string status = 1;
    string message = 2;
    optional string data = 3;
}